src/app/blog/page.module.scss
.blogSection {

    display:flex;
    padding:2rem 0;
    align-items:center;
    gap:3rem;

    @media screen and (max-width: 1350px) {
        flex-direction:column;
        align-items:stretch;
    }

    .featuredPosts {
        flex-grow:1;
        display:flex;
        flex-direction:column;
        gap:1rem;

        .featuredPostsList {
            display:flex;
            justify-content:space-between;
            gap:1rem;
            align-items:flex-start;
            .kumabubbleContainer {
                flex:1;
                .kumabubble {
                    display:block;
                    width:150px;
                    height:auto;
                    margin:0 auto;
                }
            }
        }
    }
    
    .filterOuter {
        width:25rem;
        display:flex;
        flex-direction:column;
        gap:1rem;

        .searchContainer {
            display:flex;
            align-items:stretch;
            input {
                flex-grow:1;
                padding:0.5rem 1rem;
                font-family: var(--font-nunito);
                font-size:1.1rem;
                outline:0;
                border:1px solid #ffb7e4;
                box-shadow: none;
                border-radius:0.5rem 0 0 0.5rem;
            }
            .searchIconContainer {
                width:50px;
                height:50px;
                background:#ff90be;
                border-radius:0 0.5rem 0.5rem 0;
                display:flex;
                align-items:center;
                justify-content:center;
                cursor: var(--pointer-cursor-url), auto;
                .searchIcon {
                    width:20px;
                    height:20px;
                }
            }
        }

        .tagsContainer {
            display:flex;
            flex-wrap:wrap;
            justify-content:center;
            gap:0.5rem;
            .tag {
                padding:0.5rem 1rem;
                background:#fff6f8;
                border:1px solid #ff6bb0;
                color:#ff6bb0;
                border-radius:0.2rem;
                font-family: var(--font-nunito);
                font-size:0.9rem;
                cursor: var(--pointer-cursor-url), auto;
                &:hover {
                    border:1px solid #fff6f8;
                    outline:1px solid #ff6bb0;
                }
                
                &.activeTag {
                    background:#ff88ac;
                    border:1px solid #ff88ac;
                    color:#fff;
                    &:hover {
                        border:1px solid #fff6f8;
                        outline:1px solid #ff88ac;
                    }
                }
            }
        }

        .sortContainer {
            display:flex;
            align-items:center;
            justify-content: center;
            gap:0.4rem;
            .sortTitle {
                font-family: var(--font-pixel-mix);
                color:#3f1d2b;
                font-size:0.9rem;
                font-weight:700;
                padding:0.5rem 0.5rem 0.5rem 0;
                border-right:2px solid #838383;
            }
        }
    }
}

.blogPostsSection {
    flex-grow:1;
    display:flex;
    flex-direction:column;
    gap:1rem;
    
    .blogPosts {
        display:flex;
        flex-direction:row;
        flex-wrap:wrap;
        gap:2rem;
    }

    .pagination {
        display:flex;
        align-items:center;
        gap:1rem;
        margin:3rem 0 6rem 0;
        span {
            font-family: var(--font-pixel-mix);
            color:#765a48;
            font-weight:700;
            font-size:1rem;
        }
    }

}

.blogPostsTitle, .featuredPostsTitle {
    padding:0.75rem;
    h2 {
        margin:0;
        padding:0;
        color:#ff86c2;
        font-size:1.4rem;
    }
    h4 {
        margin:0;
        padding:0;
        color:#3f1d2b85;
        font-size:0.9rem;
    }
}

a.postLink {
    text-decoration:none;
}

.post {
    display:flex;
    flex-direction:column;

    padding:0.5rem;
    align-items:stretch;

    position:relative;

    text-decoration:none;
    max-width:15rem;

    cursor: var(--pointer-cursor-url), auto;
    &:hover {
        box-shadow: 6px 6px 0 2px rgba(184, 130, 254, 0.47);
        transform:translate(-2px, -2px);
        transition:all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    }

    h3, h4, p {
        padding:0;
        margin:0;
        text-decoration:none;
    }

    h3 {
        font-size:1.5rem;
        max-width:15rem;
        margin-top:0.5rem;
        color:#ff8faf;
    }
    
    h4 {
        font-weight:400;
        color:#4f4545;
        margin-bottom:0.5rem;
        padding-right:1rem;
    }

    .postImage {
        width:100%;
        max-height:10rem;
        overflow:hidden;
        min-width:8rem;
        display:flex;
        align-items:center;
        justify-content:center;
        img {
            width:100%;
            height:100%;
            max-width:15rem;
            min-width:8rem;
            object-fit:cover;
            object-position:center;
        }
    }

    .postDetails {
        margin:0.5rem 0;
    }

    .postDate, .postTime, .postDetails, .postViews, .postLikes {
        display:flex;
        align-items:center;
        flex-wrap:wrap;
        gap:0.2rem;
        span {
            margin-right:0.5rem;
            color:#ff90c4;
            font-weight:700;
        }
    }

    .postTags {
        display:flex;
        gap:0.2rem;
        margin-top:1rem;
        margin-bottom:0.5rem;
        .postTag {
            border-radius:5px;
            border:1px solid #ff9999;
            background:#ff7cae;
            color:#ffffff;
            padding:2px 5px;
        }
    }

    &.mainFeaturedPost {
        flex-direction:row;
        gap:1.5rem;
        align-items:flex-start;

        max-width:35rem;

        h3 {
            font-size:1.8rem;
            font-weight:800;
            max-width:20rem;
            margin-top:0;
            padding-right:1.5rem;
        }

        .postImage {
            height:100%;
            width:auto;
            margin-top:0.5rem;
            margin-left:0.5rem;
            img {
                max-width:16rem;
                height:auto;
                margin-top:0.5rem;
            }
        }
    }
}

